--- a/NativeTimelapseGenerator/web/src/index.css
+++ b/NativeTimelapseGenerator/web/src/index.css
@@ -58,7 +58,7 @@ body {
 	display: block;
 	box-sizing: border-box;
 }
-h2 {
+h1, h2, h3,  h4, h5 {
 	margin: 4px;
 }
 .status-label {
@@ -106,4 +106,11 @@ th, td {
 }
 th {
 	cursor: pointer;
+}
+worker-manager {
+	display: flex;
+	flex-direction: column;
+	border: 2px inset gray;
+	padding: 4px;
+	margin: 4px;
 }
