WIP Add support for ASAN and UBSAN in debugging, logging fixes, code cleanups, fix top placer renders & update_save_stats segfault fixes

--- a/NativeTimelapseGenerator/web/src/index.css
+++ b/NativeTimelapseGenerator/web/src/index.css
@@ -102,14 +102,17 @@ table {
 	width: 100%;
 	border-collapse: collapse;
 }
-th {
+thead th {
 	padding: 0.5rem;
 }
-td {
+tbody th {
+	border: 1px solid #ccc;
+}
+tbody td {
 	border: 1px solid #ccc;
 	text-align: left;
 }
-th {
+thead th {
 	cursor: pointer;
 }
 worker-manager {
